added first image

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li class="nav-item"><a href="blog.html" class="nav-link">Sponsor</a></li>
             <li class="nav-item"><a href="blog.html" class="nav-link">Join Us</a></li>
             <li class="nav-item"><a href="blog.html" class="nav-link">School</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link">Courses</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link">Our Hacks</a></li>
           </ul>
         </div>
       </div>
@@ -74,8 +74,8 @@
                   <span class="wrap"></span>
                 </strong>
               </h1>
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-              <p><a href="https://vimeo.com/45830194" class="btn btn-primary btn-outline-white px-4 py-3 popup-vimeo"><span class="ion-ios-play mr-2"></span> Watch Video</a></p>
+              <p>"The happiest moment I felt, is the moment when I realized my ability to create." -Dr Hazem Ali</p>
+              <!--<p><a href="https://vimeo.com/45830194" class="btn btn-primary btn-outline-white px-4 py-3 popup-vimeo"><span class="ion-ios-play mr-2"></span> Watch Video</a></p>-->
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
             <div class="carousel owl-carousel">
               <div class="item">
                 <a href="portfolio.html">
-                  <img src="images/dashboard_full_1.jpg" class="img-fluid" alt="">
+                  <img src="images/img_9339094.jpg" class="img-fluid" alt="">
                 </a>
               </div>
               <div class="item">
