Add description of who we are

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
-            <span class="subheading">Our Services</span>
-            <h2>Racks provides a fully featured text services platform!</h2>
+            <span class="subheading">Who We Are</span>
+            <h2>We are a start-up non-profit organization created by students for students. Our goal is to empower youth by making tech education and resources accessible to all.</h2>
           </div>
         </div>
         <div class="row">
