--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
             <h2>We are a start-up non-profit organization created by students for students. Our goal is to empower youth by making tech education and resources accessible to all.</h2>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+        <div class="row align-center justify-content-center">
+          <div class="col-md-6 col-lg-3 d-flex align-self-center ftco-animate">
             <div class="media block-6 services d-block text-center">
               <div class="d-flex justify-content-center"><div class="icon color-1 d-flex justify-content-center mb-3"><span class="align-self-center icon-layers"></span></div></div>
               <div class="media-body p-2">
-                <h3 class="heading">Unlimited Features</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">Kurius Hacks</h3>
+                <p>Our program is a 5-week long "hack" during which participants learn to code by tackling a specific problem in a guided workshop experience. They are held twice a week: once after school and once during the weekend.</p>
               </div>
             </div>      
           </div>
-          <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+         <!-- <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services d-block text-center">
               <div class="d-flex justify-content-center"><div class="icon color-2 d-flex justify-content-center mb-3"><span class="align-self-center icon-gears"></span></div></div>
               <div class="media-body p-2">
@@ -155,7 +155,7 @@
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
               </div>
             </div>      
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -165,7 +165,12 @@
         <div class="container">
           <div class="row d-flex justify-content-center">
             <div class="col-md-10 text-center heading-section heading-section-white ftco-animate">
-              <h2 class="h1 font-weight-bold">Turn every channel into a revenue channel and drive business growth</h2>
+              <h2 class="h1 font-weight-bold">Why Take a Kurius Hack?</h2>
+              <div class="text-white">
+                <h4>1. Mentors to guide hackers in person</h4>
+                <h4>2. Continuity and cooperation in projects </h4>
+                <h4>3. Project milestones which motivate</h4>
+                <h4>4. Learning through real-life settings</h4>
               <p><a href="#" class="btn btn-primary btn-outline-white mt-3 py-3 px-4">View more details</a></p>
             </div>
           </div>
