--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <h2>We are a start-up non-profit organization created by students for students. Our goal is to empower youth by making tech education and resources accessible to all.</h2>
           </div>
         </div>
-        <div class="row align-center justify-content-center">
+        <div class="row align-start justify-content-center">
           <div class="col-md-6 col-lg-3 d-flex align-self-center ftco-animate">
             <div class="media block-6 services d-block text-center">
               <div class="d-flex justify-content-center"><div class="icon color-1 d-flex justify-content-center mb-3"><span class="align-self-center icon-layers"></span></div></div>
@@ -128,6 +128,16 @@
               </div>
             </div>      
           </div>
+          <div class="col-md-6 col-lg-3 d-flex align-self-center ftco-animate">
+            <div class="media block-6 services d-block text-center">
+              <div class="d-flex justify-content-center"><div class="icon color-1 d-flex justify-content-center mb-3"><span class="align-self-center icon-layers"></span></div></div>
+              <div class="media-body p-2">
+                <h3 class="heading">Kurius Capsules</h3>
+                <p>Specially designed for our students in mind, our Capsules gather a variety of industry specialists in a weekly workshop session.</p>
+              </div>
+            </div>      
+          </div>
+
          <!-- <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services d-block text-center">
               <div class="d-flex justify-content-center"><div class="icon color-2 d-flex justify-content-center mb-3"><span class="align-self-center icon-gears"></span></div></div>
