add placeholder topics for hacks

--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-self-center ftco-animate">
             <div class="media block-6 services d-block text-center">
-              <div class="d-flex justify-content-center"><div class="icon color-1 d-flex justify-content-center mb-3"><span class="align-self-center icon-layers"></span></div></div>
+              <div class="d-flex justify-content-center"><div class="icon color-2 d-flex justify-content-center mb-3"><span class="align-self-center icon-gears"></span></div></div>
               <div class="media-body p-2">
                 <h3 class="heading">Kurius Capsules</h3>
-                <p>Specially designed for our students in mind, our Capsules gather a variety of industry specialists in a weekly workshop session.</p>
+                <p>Specially designed for our students in mind, our Capsules gather a variety of industry specialists in a weekly workshop session. They have the unique chance to learn from the best in a tight-nit community of equally passionate students.</p>
               </div>
             </div>      
           </div>
@@ -176,12 +176,12 @@
           <div class="row d-flex justify-content-center">
             <div class="col-md-10 text-center heading-section heading-section-white ftco-animate">
               <h2 class="h1 font-weight-bold">Why Take a Kurius Hack?</h2>
-              <div class="text-white">
+              <div style="color: white">
                 <h4>1. Mentors to guide hackers in person</h4>
                 <h4>2. Continuity and cooperation in projects </h4>
                 <h4>3. Project milestones which motivate</h4>
                 <h4>4. Learning through real-life settings</h4>
-              <p><a href="#" class="btn btn-primary btn-outline-white mt-3 py-3 px-4">View more details</a></p>
+                <!-- <a href="#" class="btn btn-primary btn-outline-white mt-3 py-3 px-4">View more details</a> -->
             </div>
           </div>
         </div>
@@ -192,33 +192,33 @@
       <div class="container-fluid">
         <div class="row no-gutters justify-content-center mb-5 pb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
-            <span class="subheading">Works</span>
-            <h2>Recent Works</h2>
+            <span class="subheading">What We Offer</span>
+            <h2>Our Hacks</h2>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="block-3 d-md-flex ftco-animate">
             <a href="portfolio.html" class="image" style="background-image: url('images/work-1.jpg'); "></a>
             <div class="text">
-              <h4 class="subheading">Illustration</h4>
-              <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+              <h4 class="subheading">Potential hack #1</h4>
+              <h2 class="heading"><a href="portfolio.html">Potential subject of hack #1</a></h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam rerum libero, odio aperiam ex debitis laboriosam fugiat neque nam excepturi officiis perferendis aliquid itaque eius odit consequatur deserunt impedit sint.</p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate">
             <a href="portfolio.html" class="image order-2" style="background-image: url('images/work-2.jpg'); "></a>
             <div class="text order-1">
-              <h4 class="subheading">Application</h4>
-              <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+              <h4 class="subheading">Potential hack #2</h4>
+              <h2 class="heading"><a href="portfolio.html">Potential subject of hack #2</a></h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident architecto facilis. Reiciendis corrupti veniam perspiciatis perferendis, expedita accusantium nobis saepe odit magni quisquam rem laboriosam iste eius ab repudiandae!</p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate">
             <a href="portfolio.html" class="image" style="background-image: url('images/work-3.jpg'); "></a>
             <div class="text">
-              <h4 class="subheading">Web Design</h4>
-              <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+              <h4 class="subheading">Potential hack #3</h4>
+              <h2 class="heading"><a href="portfolio.html">Potential subject of hack #3</a></h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et est animi, quas at quae, ut iusto culpa harum perspiciatis soluta voluptas laudantium similique ad libero necessitatibus in velit! Praesentium, ad.</p>
             </div>
           </div>
         </div>
