--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
-                  <a class="dropdown-item" href="portfolio.html">Our Team</a>
-                  <a class="dropdown-item" href="portfolio-single.html">Our Vision</a>
+                  <a class="dropdown-item" href="about-team.html">Our Team</a>
+                  <a class="dropdown-item" href="about-vision.html">Our Vision</a>
                 </div>
             </li>
-            <li class="nav-item"><a href="solutions.html" class="nav-link">Events</a></li>
+            <li class="nav-item"><a href="events.html" class="nav-link">Events</a></li>
             <!--<li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
@@ -59,10 +59,10 @@
                   <a class="dropdown-item" href="portfolio-single.html">Our Vision</a>
                 </div>
             </li>-->
-            <li class="nav-item"><a href="blog.html" class="nav-link">Sponsor</a></li>
-            <li class="nav-item"><a href="blog.html" class="nav-link">Join Us</a></li>
-            <li class="nav-item"><a href="blog.html" class="nav-link">School</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link">Our Hacks</a></li>
+            <li class="nav-item"><a href="sponsor.html" class="nav-link">Sponsor</a></li>
+            <!-- <li class="nav-item"><a href="blog-single.html" class="nav-link">Join Us</a></li> -->
+            <!-- <li class="nav-item"><a href="blog.html" class="nav-link">School</a></li> -->
+            <li class="nav-item"><a href="contact.html" class="nav-link">Join Us</a></li>
           </ul>
         </div>
       </div>
