--- a/sponsor.html
+++ b/sponsor.html
@@ -59,7 +59,7 @@
                       <a class="dropdown-item" href="portfolio-single.html">Our Vision</a>
                     </div>
                 </li>-->
-                <li class="nav-item"><a href="sponsor.html" class="nav-link">Sponsor</a></li>
+                <li class="nav-item"><a href="sponsor.html" class="nav-link">Partner</a></li>
                 <!-- <li class="nav-item"><a href="blog-single.html" class="nav-link">Join Us</a></li> -->
                 <!-- <li class="nav-item"><a href="blog.html" class="nav-link">School</a></li> -->
                 <li class="nav-item"><a href="contact.html" class="nav-link">Join Us</a></li>
