change color of gradient

--- a/about-team.html
+++ b/about-team.html
@@ -71,7 +71,10 @@
     
     <section class="home-slider ftco-degree-bg">
       <div class="slider-item bread-wrap" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
-        <div class="overlay"></div>
+        <div class="overlay" style=" background: rgb(25,170,163);
+        background: linear-gradient(45deg, rgba(25,170,163,1) 0%, rgba(203,89,184,1) 100%); ">
+          
+        </div>
         <div class="container">
           <div class="row slider-text justify-content-center align-items-center">
             <div class="col-md-10 col-sm-12 ftco-animate mb-4 text-center">
