--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
       </div>
     </section>
 
-    <footer class="ftco-footer ftco-bg-dark ftco-section">
+    <footer class="ftco-footer ftco-bg-dark ftco-section" style="background: #cc3399">
         <div class="container">
           <div class="row mb-5 align-items-center justify-content-center">
             <div class="col-md-4">
