--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="h2">
               <p style="color: white;">Our program is a 5-week long "hack" during which participants learn to code by
                 tackling a specific problem in a guided workshop experience. They are held twice a week: once after
-                school and once during the weekend.</p>
+                school (Capsule) and once during the weekend (Period).</p>
               <!-- <a href="#" class="btn btn-primary btn-outline-white mt-3 py-3 px-4">View more details</a> -->
             </div>
           </div>
