--- a/sponsor.html
+++ b/sponsor.html
@@ -69,22 +69,23 @@
         </nav>
         <!-- END nav -->
     
-    <section class="home-slider ftco-degree-bg">
+    <section class="home-slider ftco-degree-bg" style="margin-bottom: 15rem;">
       <div class="slider-item bread-wrap" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
         <div class="overlay" style=" background: rgb(25,170,163);
         background: linear-gradient(45deg, rgba(25,170,163,1) 0%, rgba(203,89,184,1) 100%); "></div>
         <div class="container">
           <div class="row slider-text justify-content-center align-items-center">
             <div class="col-md-10 col-sm-12 ftco-animate mb-4 text-center">
-              <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Sponsor</span></p>
-              <h1 class="mb-3 bread">Sponsor Us!</h1>
+              <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Partner</span></p>
+              <h1 class="mb-3 bread">Want to support what we're doing?</h1>
+              <a href="https://drive.google.com/file/d/1wmueIeouRvrJiZz_CmYNFoWvvBpHSrxI/view?usp=sharing" class="btn btn-primary btn-outline-white mt-3 py-3 px-4" target="_blank">See more info</a>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="ftco-section ftco-degree-bg">
+    <!-- <section class="ftco-section ftco-degree-bg">
       <div class="container">
         <div class="row">
           <div class="col-md-4 ftco-animate">
@@ -188,8 +189,7 @@
           </div>
         </div>
       </div>
-    </section>
-
+    </section> -->
     <footer class="ftco-footer ftco-bg-dark ftco-section" style="background: #cc3399">
         <div class="container">
           <div class="row mb-5 align-items-center justify-content-center">
