--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,700,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" >
 
   <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
   <link rel="stylesheet" href="css/animate.css">
@@ -35,7 +36,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img class="png-icon d-inline-block" src="images/800x800transparent.png" style="height: 30px">Kurius
+        <img class="png-icon d-inline-block" src="images/800x800transparent.png" style="height: 30px">
+        <img class="png-icon d-inline-block" src="images/kuriuswhite.png" style="height: 50px">
       </a>
 
 
@@ -67,26 +69,28 @@
           <!-- <li class="nav-item"><a href="blog-single.html" class="nav-link">Join Us</a></li> -->
           <!-- <li class="nav-item"><a href="blog.html" class="nav-link">School</a></li> -->
           <li class="nav-item"><a href="contact.html" class="nav-link">Join Us</a></li>
+          <li class="nav-item"><a href="fr-index.html" class="nav-link">FR</a></li>
+
         </ul>
       </div>
     </div>
   </nav>
   <!-- END nav -->
 
-  <section class="home-slider ftco-degree-bg">
+  <section class="home-slider ftco-degree-bg" style="padding-bottom: 140px">
     <div class="slider-item">
       <div class="overlay" style=" background: rgb(25,170,163);
-        background: linear-gradient(45deg, rgba(25,170,163,1) 0%, rgba(203,89,184,1) 100%); "></div>
+        background: linear-gradient(45deg, rgb(0,0,128), rgb(212,0,94)); "></div>
       <div class="container">
         <div class="row slider-text align-items-center justify-content-center">
           <div class="col-md-10 ftco-animate text-center">
-            <img src="images/800x800transparent.png" style="height: 100px;">
+            <img src="images/800x800transparent.png" style="height: 200px;">
             <h1 class="mb-4">I love to
               <strong class="typewrite" data-period="1000" data-type='[ "Code.", "Learn.", "Hack.", "Revolutionize."]'>
                 <span class="wrap"></span>
               </strong>
             </h1>
-            <p>"The happiest moment I felt, is the moment when I realized my ability to create." -Dr Hazem Ali</p>
+            <p style="padding-bottom: 30px">"The happiest moment I felt, is the moment when I realized my ability to create." -Dr Hazem Ali</p>
             <!--<p><a href="https://vimeo.com/45830194" class="btn btn-primary btn-outline-white px-4 py-3 popup-vimeo"><span class="ion-ios-play mr-2"></span> Watch Video</a></p>-->
           </div>
         </div>
@@ -95,14 +99,14 @@
   </section>
   <!-- END slider -->
 
-  <section class="ftco-section-featured ftco-animate">
+  <section class="ftco-section-featured ftco-animate" style="padding-bottom: 50px">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="carousel owl-carousel">
             <div class="item">
               <a href="portfolio.html">
-                <img src="images/img_9339094.jpg" class="img-fluid" alt="">
+                <img src="images/EFL_0475.jpg" class="img-fluid" alt="">
               </a>
             </div>
             <div class="item">
@@ -110,6 +114,12 @@
                 <img src="images/photo1.jpg" class="img-fluid" alt="">
               </a>
             </div>
+            <div class="item">
+              <a href="portfolio.html">
+                <img src="images/img_9336093.jpg" class="img-fluid" alt="">
+              </a>
+            </div>
+
             <!-- <div class="item">
                 <a href="portfolio.html">
                   <img src="images/photo2.jpg" class="img-fluid" alt="">
@@ -122,14 +132,15 @@
   </section>
 
 
-  <section class="ftco-section ftco-degree-bg">
+  <section class="ftco-section ftco-degree-bg" style="padding-top: 50px; padding-bottom: 100px">
     <div class="container-fluid backgr" style=" background: rgb(25,170,163);
       background: linear-gradient(45deg, rgba(25,170,163,1) 0%, rgba(203,89,184,1) 100%); ">
       <div class="row justify-content-center py-5 mb-5">
         <div class="col-md-7 text-center heading-section ftco-animate">
-          <span class="subheading" style="font-size: 40px; color: rgba(255, 255, 255, 0.6);">Who We Are</span>
-          <h2 style="color: white; font-weight: 350;">We are a start-up non-profit organization created by students for
-            students. Our goal is to empower youth by making tech education and resources accessible to all.</h2>
+          <span style="font-size: 60px; color: rgba(255, 255, 255, 1); font-weight: bold; font-family: Lato;">What is Kurius?</span>
+          <h3 style="color: white; font-weight: 350; padding-top: 50px;padding-bottom: 80px; font-family: Lato">Kurius is a start-up non-profit organization created by students for
+            students. Our mission is to provide free, accessible and quality tech education for all students in Montreal by working and partnering up with world-class organizations, companies,
+mentors and educators.</h2>
         </div>
       </div>
     </div>
@@ -147,129 +158,94 @@
 
       }
     </style>
-    <div class="container">
-      <div class="row align-start justify-content-center">
-        <div class="col-md-6 col-lg-4 d-flex align-self-center ftco-animate">
-          <div class="media block-6 services d-block text-center">
-            <div class="d-flex justify-content-center">
-              <div class="icon color-1 d-flex justify-content-center mb-3"><span
-                  class="align-self-center icon-layers"></span></div>
-            </div>
-            <div class="media-body p-2">
-              <h3 class="heading">Kurius Capsules</h3>
-              <p>Specially designed for our students in mind, our Capsules gather a variety of industry specialists in a
-                weekly workshop session. They have the unique chance to learn from the best in a tight-nit community of
-                equally passionate students.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4 d-flex align-self-center ftco-animate">
-          <div class="media block-6 services d-block text-center">
-            <div class="d-flex justify-content-center">
-              <div class="icon color-2 d-flex justify-content-center mb-3"><span
-                  class="align-self-center icon-gears"></span></div>
-            </div>
-            <div class="media-body p-2">
-              <h3 class="heading">Kurius Periods</h3>
-              <p>Specially designed for our students in mind, our Periods gather a variety of industry specialists in a
-                weekly workshop session. They have the unique chance to learn from the best in a tight-nit community of
-                equally passionate students.</p>
-            </div>
-          </div>
-        </div>
 
-        <!-- <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block text-center">
-              <div class="d-flex justify-content-center"><div class="icon color-2 d-flex justify-content-center mb-3"><span class="align-self-center icon-gears"></span></div></div>
-              <div class="media-body p-2">
-                <h3 class="heading">Multiple Functions</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block text-center">
-              <div class="d-flex justify-content-center"><div class="icon color-3 d-flex justify-content-center mb-3"><span class="align-self-center icon-paper-plane"></span></div></div>
-              <div class="media-body p-2">
-                <h3 class="heading">Advanced Visualizations</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              </div>
-            </div>
-          </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-block text-center">
-              <div class="d-flex justify-content-center"><div class="icon color-4 d-flex justify-content-center mb-3"><span class="align-self-center icon-live_help"></span></div></div>
-              <div class="media-body p-2">
-                <h3 class="heading">Community &amp; Supports</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-              </div>
-            </div>
-          </div> -->
-      </div>
-    </div>
+          <center><span style="font-size: 60px; color: black; font-weight: bold; font-family: Lato; align: center;">Introducing: Kurius Hack</span></center>
+
+
   </section>
 
-  <section class="ftco-section-parallax ftco-degree-bg" style="background:#3fa3bf;">
+  <section class="ftco-section-parallax ftco-degree-bg" style="background:#3fa3bf;padding-top: 1px; padding-bottom: 1px">
     <div class="parallax-img d-flex align-items-center">
       <div class="container">
         <div class="row d-flex justify-content-center">
           <div class="col-md-10 text-center heading-section heading-section-white ftco-animate">
-            <h2 class="h1 font-weight-bold" style="color: rgb(247, 247, 247);">What Is a Kurius Hack?</h2>
+            <h1 style="color: rgb(247, 247, 247);">Kurius Hack</h1>
             <div class="h2">
               <p style="color: white;">Our program is a 5-week long "hack" during which participants learn to code by
-                tackling a specific problem in a guided workshop experience. They are held twice a week: once after
-                school (Capsule) and once during the weekend (Period).</p>
+                tackling a specific problem in a guided workshop experience, divided into Kurius Capsules and Kurius Workshops.Each Kurius Hack will revolve around a specific theme
+such as website development and cryptocurrency. Our first Kurius Hack will be a Kurius Web Hack.</p>
               <!-- <a href="#" class="btn btn-primary btn-outline-white mt-3 py-3 px-4">View more details</a> -->
             </div>
           </div>
         </div>
       </div>
-  </section>
 
-  <section class="ftco-section">
-    <div class="container-fluid">
-      <div class="row no-gutters justify-content-center mb-5 pb-5">
-        <div class="col-md-7 text-center heading-section ftco-animate">
-          <span class="subheading">What We Offer</span>
-          <h2>Our Hacks</h2>
+      <div class="container">
+        <div class="row align-start justify-content-center">
+          <div class="col-md-6 col-lg-4 d-flex align-self-center ftco-animate">
+            <div class="media block-6 services d-block text-center">
+              <div class="d-flex justify-content-center">
+                <div class="icon color-1 d-flex justify-content-center mb-3"><span
+                    class="align-self-center icon-layers"></span></div>
+              </div>
+              <div class="media-body p-2">
+                <h2 class="heading">Kurius Capsules</h2>
+                <p style="font-size: 20px">Specially designed for our students in mind, our Capsules gather a variety of industry specialists in a
+                  weekly workshop session. They have the unique chance to learn from the best in a tight-nit community of
+                  equally passionate students.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 d-flex align-self-center ftco-animate">
+            <div class="media block-6 services d-block text-center">
+              <div class="d-flex justify-content-center">
+                <div class="icon color-2 d-flex justify-content-center mb-3"><span
+                    class="align-self-center icon-gears"></span></div>
+              </div>
+              <div class="media-body p-2">
+                <h2 class="heading">Kurius Periods</h2>
+                <p style="font-size: 20px">Specially designed for our students in mind, our Periods allow our participants to collaborate in a fun and engaging session dedicated to coding during a weekend, and
+  work together on a big project that will be showcased at the end of the Kurius Hack. </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+              <div class="media block-6 services d-block text-center">
+                <div class="d-flex justify-content-center"><div class="icon color-2 d-flex justify-content-center mb-3"><span class="align-self-center icon-gears"></span></div></div>
+                <div class="media-body p-2">
+                  <h3 class="heading">Multiple Functions</h3>
+                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+              <div class="media block-6 services d-block text-center">
+                <div class="d-flex justify-content-center"><div class="icon color-3 d-flex justify-content-center mb-3"><span class="align-self-center icon-paper-plane"></span></div></div>
+                <div class="media-body p-2">
+                  <h3 class="heading">Advanced Visualizations</h3>
+                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
+              <div class="media block-6 services d-block text-center">
+                <div class="d-flex justify-content-center"><div class="icon color-4 d-flex justify-content-center mb-3"><span class="align-self-center icon-live_help"></span></div></div>
+                <div class="media-body p-2">
+                  <h3 class="heading">Community &amp; Supports</h3>
+                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                </div>
+              </div>
+            </div> -->
         </div>
       </div>
-      <div class="row no-gutters">
-        <div class="block-3 d-md-flex ftco-animate">
-          <a href="portfolio.html" class="image" style="background-image: url('images/work-1.jpg'); "></a>
-          <div class="text">
-            <h4 class="subheading">Potential hack #1</h4>
-            <h2 class="heading"><a href="portfolio.html">Potential subject of hack #1</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam rerum libero, odio aperiam ex debitis
-              laboriosam fugiat neque nam excepturi officiis perferendis aliquid itaque eius odit consequatur deserunt
-              impedit sint.</p>
-          </div>
-        </div>
-        <div class="block-3 d-md-flex ftco-animate">
-          <a href="portfolio.html" class="image order-2" style="background-image: url('images/work-2.jpg'); "></a>
-          <div class="text order-1">
-            <h4 class="subheading">Coming Soon</h4>
-            <h2 class="heading"><a href="portfolio.html">Potential subject of hack #2</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita provident architecto facilis.
-              Reiciendis corrupti veniam perspiciatis perferendis, expedita accusantium nobis saepe odit magni quisquam
-              rem laboriosam iste eius ab repudiandae!</p>
-          </div>
-        </div>
-        <div class="block-3 d-md-flex ftco-animate">
-          <a href="portfolio.html" class="image" style="background-image: url('images/work-3.jpg'); "></a>
-          <div class="text">
-            <h4 class="subheading">Coming Soon</h4>
-            <h2 class="heading"><a href="portfolio.html">Potential subject of hack #3</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et est animi, quas at quae, ut iusto culpa harum
-              perspiciatis soluta voluptas laudantium similique ad libero necessitatibus in velit! Praesentium, ad.</p>
-          </div>
-        </div>
-      </div>
-    </div>
   </section>
 
-  <section class="ftco-section testimony-section ftco-degree-bg">
+
+
+  <!--section class="ftco-section testimony-section ftco-degree-bg">
     <div class="container">
       <div class="row justify-content-center mb-5 pb-5">
         <div class="col-md-7 text-center heading-section ftco-animate">
@@ -361,7 +337,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section -->
 
   <!-- <section class="ftco-section ftco-counter ftco-degree-bg" id="section-counter">
       <div class="container">
@@ -459,12 +435,14 @@
       <div class="row mb-5 align-items-center justify-content-center">
         <div class="col-md-4">
           <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Kurius</h2>
-            <p>Placeholder text for company description</p>
+            <img class="png-icon d-inline-block" src="images/kuriuswhite.png" style="height: 50px">
+            <p>Follow us on Social Media!</p>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
               <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
-              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+              <li class="ftco-animate"><a href="https://fb.me/kuriusmtl" target="_blank"><span class="icon-facebook"></span></a></li>
+              <li class="ftco-animate"><a href="https://instagram.com/kuriusmtl" target="_blank"><span class="icon-instagram"></span></a></li>
+              <li class="ftco-animate"><a href="https://linkedin.com/company/kurius" target="_blank"><span class="icon-linkedin"></span></a></li>
+
             </ul>
           </div>
         </div>
@@ -473,9 +451,7 @@
             <h2 class="ftco-heading-2">Contact Information</h2>
             <ul class="list-unstyled">
               <!-- <li><a href="#" class="py-2 d-block">198 West 21th Street, Suite 721 New York NY 10016</a></li> -->
-              <li><a href="#" class="py-2 d-block">+ 1235 2355 98</a></li>
-              <li><a href="#" class="py-2 d-block">info@yoursite.com</a></li>
-              <li><a href="#" class="py-2 d-block">email@email.com</a></li>
+              <li><a href="mailto:info@kurius.ca" class="py-2 d-block">info@kurius.ca</a></li>
             </ul>
           </div>
         </div>
