--- a/index.html
+++ b/index.html
@@ -133,14 +133,13 @@
 
 
   <section class="ftco-section ftco-degree-bg" style="padding-top: 50px; padding-bottom: 100px">
-    <div class="container-fluid backgr" style=" background: rgb(25,170,163);
-      background: linear-gradient(45deg, rgba(25,170,163,1) 0%, rgba(203,89,184,1) 100%); ">
+    <div class="container-fluid backgr" style="background: linear-gradient(45deg, rgb(0,80,114) 0%, rgb(0,0,128) 100%); ">
       <div class="row justify-content-center py-5 mb-5">
         <div class="col-md-7 text-center heading-section ftco-animate">
           <span style="font-size: 60px; color: rgba(255, 255, 255, 1); font-weight: bold; font-family: Lato;">What is Kurius?</span>
           <h3 style="color: white; font-weight: 350; padding-top: 50px;padding-bottom: 80px; font-family: Lato">Kurius is a start-up non-profit organization created by students for
             students. Our mission is to provide free, accessible and quality tech education for all students in Montreal by working and partnering up with world-class organizations, companies,
-mentors and educators.</h2>
+mentors and educators.</h3>
         </div>
       </div>
     </div>
@@ -160,277 +159,100 @@ mentors and educators.</h2>
     </style>
 
 
-          <center><span style="font-size: 60px; color: black; font-weight: bold; font-family: Lato; align: center;">Introducing: Kurius Hack</span></center>
-
-
-  </section>
-
-  <section class="ftco-section-parallax ftco-degree-bg" style="background:#3fa3bf;padding-top: 1px; padding-bottom: 1px">
-    <div class="parallax-img d-flex align-items-center">
-      <div class="container">
-        <div class="row d-flex justify-content-center">
-          <div class="col-md-10 text-center heading-section heading-section-white ftco-animate">
-            <h1 style="color: rgb(247, 247, 247);">Kurius Hack</h1>
-            <div class="h2">
-              <p style="color: white;">Our program is a 5-week long "hack" during which participants learn to code by
-                tackling a specific problem in a guided workshop experience, divided into Kurius Capsules and Kurius Workshops.Each Kurius Hack will revolve around a specific theme
-such as website development and cryptocurrency. Our first Kurius Hack will be a Kurius Web Hack.</p>
-              <!-- <a href="#" class="btn btn-primary btn-outline-white mt-3 py-3 px-4">View more details</a> -->
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row align-start justify-content-center">
-          <div class="col-md-6 col-lg-4 d-flex align-self-center ftco-animate">
-            <div class="media block-6 services d-block text-center">
-              <div class="d-flex justify-content-center">
-                <div class="icon color-1 d-flex justify-content-center mb-3"><span
-                    class="align-self-center icon-layers"></span></div>
-              </div>
-              <div class="media-body p-2">
-                <h2 class="heading">Kurius Capsules</h2>
-                <p style="font-size: 20px">Specially designed for our students in mind, our Capsules gather a variety of industry specialists in a
-                  weekly workshop session. They have the unique chance to learn from the best in a tight-nit community of
-                  equally passionate students.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-flex align-self-center ftco-animate">
-            <div class="media block-6 services d-block text-center">
-              <div class="d-flex justify-content-center">
-                <div class="icon color-2 d-flex justify-content-center mb-3"><span
-                    class="align-self-center icon-gears"></span></div>
-              </div>
-              <div class="media-body p-2">
-                <h2 class="heading">Kurius Periods</h2>
-                <p style="font-size: 20px">Specially designed for our students in mind, our Periods allow our participants to collaborate in a fun and engaging session dedicated to coding during a weekend, and
-  work together on a big project that will be showcased at the end of the Kurius Hack. </p>
-              </div>
-            </div>
-          </div>
-
-          <!-- <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
-              <div class="media block-6 services d-block text-center">
-                <div class="d-flex justify-content-center"><div class="icon color-2 d-flex justify-content-center mb-3"><span class="align-self-center icon-gears"></span></div></div>
-                <div class="media-body p-2">
-                  <h3 class="heading">Multiple Functions</h3>
-                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
-              <div class="media block-6 services d-block text-center">
-                <div class="d-flex justify-content-center"><div class="icon color-3 d-flex justify-content-center mb-3"><span class="align-self-center icon-paper-plane"></span></div></div>
-                <div class="media-body p-2">
-                  <h3 class="heading">Advanced Visualizations</h3>
-                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
-              <div class="media block-6 services d-block text-center">
-                <div class="d-flex justify-content-center"><div class="icon color-4 d-flex justify-content-center mb-3"><span class="align-self-center icon-live_help"></span></div></div>
-                <div class="media-body p-2">
-                  <h3 class="heading">Community &amp; Supports</h3>
-                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-                </div>
-              </div>
-            </div> -->
-        </div>
-      </div>
-  </section>
-
-
-
-  <!--section class="ftco-section testimony-section ftco-degree-bg">
-    <div class="container">
-      <div class="row justify-content-center mb-5 pb-5">
+    <div class="container-fluid backgr" style="background: white; ">
+      <div class="row justify-content-center py-5 mb-5">
         <div class="col-md-7 text-center heading-section ftco-animate">
-          <span class="subheading">Customer Says</span>
-          <h2>What People Say</h2>
-          <h1>This section can be added in after the first 5-week program after we ask for reviews from the participants
-          </h1>
-        </div>
-      </div>
-      <div class="row ftco-animate">
-        <div class="col-md-12">
-          <div class="carousel-testimony owl-carousel ftco-owl">
-            <div class="item text-center">
-              <div class="testimony-wrap p-4 pb-5">
-                <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
-                  <span class="quote d-flex align-items-center justify-content-center">
-                    <i class="icon-quote-left"></i>
-                  </span>
-                </div>
-                <div class="text">
-                  <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts.</p>
-                  <p class="name">Dennis Green</p>
-                  <span class="position">Marketing Manager</span>
-                </div>
-              </div>
-            </div>
-            <div class="item text-center">
-              <div class="testimony-wrap p-4 pb-5">
-                <div class="user-img mb-4" style="background-image: url(images/person_2.jpg)">
-                  <span class="quote d-flex align-items-center justify-content-center">
-                    <i class="icon-quote-left"></i>
-                  </span>
-                </div>
-                <div class="text">
-                  <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts.</p>
-                  <p class="name">Dennis Green</p>
-                  <span class="position">Interface Designer</span>
-                </div>
-              </div>
-            </div>
-            <div class="item text-center">
-              <div class="testimony-wrap p-4 pb-5">
-                <div class="user-img mb-4" style="background-image: url(images/person_3.jpg)">
-                  <span class="quote d-flex align-items-center justify-content-center">
-                    <i class="icon-quote-left"></i>
-                  </span>
-                </div>
-                <div class="text">
-                  <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts.</p>
-                  <p class="name">Dennis Green</p>
-                  <span class="position">UI Designer</span>
-                </div>
-              </div>
-            </div>
-            <div class="item text-center">
-              <div class="testimony-wrap p-4 pb-5">
-                <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
-                  <span class="quote d-flex align-items-center justify-content-center">
-                    <i class="icon-quote-left"></i>
-                  </span>
-                </div>
-                <div class="text">
-                  <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts.</p>
-                  <p class="name">Dennis Green</p>
-                  <span class="position">Web Developer</span>
-                </div>
-              </div>
-            </div>
-            <div class="item text-center">
-              <div class="testimony-wrap p-4 pb-5">
-                <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
-                  <span class="quote d-flex align-items-center justify-content-center">
-                    <i class="icon-quote-left"></i>
-                  </span>
-                </div>
-                <div class="text">
-                  <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts.</p>
-                  <p class="name">Dennis Green</p>
-                  <span class="position">System Analytics</span>
-                </div>
-              </div>
-            </div>
-          </div>
+          <span style="font-size: 60px; color: black; font-weight: bold; font-family: Lato; ">What do we do?</span>
+          <h3 style="color: black; font-weight: 350; padding-top: 1px;padding-bottom: 1px; font-family: Lato">Kurius organizes numerous events and programs throughout the city of
+Montreal in order to enable the youth to change the world with tech.
+Currently, we are working on a new and exciting project: Kurius Hack, an
+innovative program that teaches different aspects of coding around 5-week
+period through interactive workshops and creative projects. Our hope is to
+deploy Kurius Hack in numerous schools across Montreal, with around 15-25
+participants for our first pilot project, and possibly expanding to more than 50
+participants per Kurius Hack if our pilot project shows great success.</h3>
         </div>
       </div>
     </div>
-  </section -->
 
-  <!-- <section class="ftco-section ftco-counter ftco-degree-bg" id="section-counter">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-            <h2>Our achievements</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 col-lg-4 d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 text-center">
-              <div class="text">
-                <strong class="number" data-number="1000">0</strong>
-                <span>Customers are satisfied with our professional support</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 text-center">
-              <div class="text">
-                <strong class="number" data-number="12000">0</strong>
-                <span>Amazing preset options to be mixed and combined</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18 text-center">
-              <div class="text">
-                <strong class="number" data-number="10000">0</strong>
-                <span>Average response time on live chat support channel</span>
-              </div>
-            </div>
-          </div>
+
+  </section>
+
+
+
+
+
+
+
+
+
+
+  <section class="ftco-section ftco-degree-bg" style="padding-top: 20px; padding-bottom: 100px">
+    <div class="container-fluid backgr">
+      <div class="row justify-content-center py-5 mb-5" style="background-image: url(images/bnwimageblurred.jpg); background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;">
+        <div class="col-md-7 text-center heading-section ftco-animate">
+           <center><span style="font-size: 80px; color: white; font-weight: bold; font-family: Lato; align: center;">Kurius Hack</span></center>
+          <div style="padding-bottom: 80px"><h4 style="font-family: Lato; float:right; margin-right: 10px; color: white">Coming on February 11th 2020!</h4></div>
+          <h3 style="color: white; font-weight: 350; padding-top: 10px;padding-bottom: 80px; font-family: Lato;">Our program is a 5-week long "hack" during which participants learn to code by
+           tackling a specific problem in a guided workshop experience, divided into Kurius Capsules and Kurius Periods. Each Kurius Hack will revolve around a specific themesuch as website development and cryptocurrency. Our first Kurius Hack will be a Kurius Web Hack.</h3>
         </div>
       </div>
-    </section>
+    </div>
 
-    <section class="ftco-section ftco-degree-bg">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-            <span class="subheading">Blog</span>
-            <h2>Recent Blog</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 ftco-animate">
-            <div class="blog-entry">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-              </a>
-              <div class="text p-4 d-block">
-                <div class="meta mb-3">
-                  <div><a href="#">July 12, 2018</a></div>
-                  <div><a href="#">Admin</a></div>
-                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-              </div>
+    <div class="container">
+     <div class="row align-start justify-content-center">
+        <div class="col-md-6 col-lg-4 d-flex align-self-center ftco-animate">
+          <div class="media block-6 services d-block text-center">
+            <div class="d-flex justify-content-center">
+             <div class="icon color-1 d-flex justify-content-center mb-3"><span
+                  class="align-self-center icon-layers"></span></div>
             </div>
-          </div>
-          <div class="col-md-4 ftco-animate">
-            <div class="blog-entry" data-aos-delay="100">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-              </a>
-              <div class="text p-4">
-                <div class="meta mb-3">
-                  <div><a href="#">July 12, 2018</a></div>
-                  <div><a href="#">Admin</a></div>
-                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 ftco-animate">
-            <div class="blog-entry" data-aos-delay="200">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-              </a>
-              <div class="text p-4">
-                <div class="meta mb-3">
-                  <div><a href="#">July 12, 2018</a></div>
-                  <div><a href="#">Admin</a></div>
-                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                </div>
-                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-              </div>
+            <div class="media-body p-2">
+             <h2 class="heading">Kurius Capsules</h2>
+             <p style="font-size: 20px">Specially designed for our students in mind, our Capsules gather a variety of industry specialists in a
+                weekly workshop session. They have the unique chance to learn from the best in a tight-nit community of
+                equally passionate students.</p>
             </div>
           </div>
         </div>
-      </div>
-    </section> -->
+        <div class="col-md-6 col-lg-4 d-flex align-self-center ftco-animate">
+          <div class="media block-6 services d-block text-center">
+            <div class="d-flex justify-content-center">
+             <div class="icon color-2 d-flex justify-content-center mb-3"><span
+                  class="align-self-center icon-gears"></span></div>
+            </div>
+            <div class="media-body p-2">
+             <h2 class="heading">Kurius Periods</h2>
+             <p style="font-size: 20px">Specially designed for our students in mind, our Periods allow our participants to collaborate in a fun and engaging session dedicated to coding during a weekend, and
+work together on a big project that will be showcased at the end of the Kurius Hack. </p>
+            </div>
+          </div>
+        </div>
+     </div>
+    </div>
+    <style>
+      .backgr {
+        clip-path: polygon(0 0,
+            /* left top */
+            100% 0,
+            /* right top */
+            100% 100%,
+            /* right bottom */
+            0 90%
+            /* left bottom */
+          );
 
-  <footer class="ftco-footer ftco-bg-dark ftco-section" style="background: #cc3399">
+      }
+    </style>
+
+  </section>
+
+
+
+  <footer class="ftco-footer ftco-bg-dark ftco-section" style="background:linear-gradient(45deg, rgb(211,8,117) 20%, rgb(255,217,0) 100%)">
     <div class="container">
       <div class="row mb-5 align-items-center justify-content-center">
         <div class="col-md-4">
