added french page

--- a/about.html
+++ b/about.html
@@ -339,42 +339,41 @@
       </div>
     </section>
 
-    <footer class="ftco-footer ftco-bg-dark ftco-section">
-        <div class="container">
-          <div class="row mb-5 align-items-center justify-content-center">
-            <div class="col-md-4">
-              <div class="ftco-footer-widget mb-4">
-                <h2 class="ftco-heading-2">Kurius</h2>
-                <p>Placeholder text for company description</p>
-                <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
-                  <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
-                  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-4">
-               <div class="ftco-footer-widget mb-4">
-                <h2 class="ftco-heading-2">Contact Information</h2>
-                <ul class="list-unstyled">
-                  <!-- <li><a href="#" class="py-2 d-block">198 West 21th Street, Suite 721 New York NY 10016</a></li> -->
-                  <li><a href="#" class="py-2 d-block">+ 1235 2355 98</a></li>
-                  <li><a href="#" class="py-2 d-block">info@yoursite.com</a></li>
-                  <li><a href="#" class="py-2 d-block">email@email.com</a></li>
-                </ul>
-              </div>
+    <footer class="ftco-footer ftco-bg-dark ftco-section" style="background:linear-gradient(45deg, rgb(211,8,117) 20%, rgb(255,217,0) 100%)">
+      <div class="container">
+        <div class="row mb-5 align-items-center justify-content-center">
+          <div class="col-md-4">
+            <div class="ftco-footer-widget mb-4">
+              <img class="png-icon d-inline-block" src="images/kuriuswhite.png" style="height: 50px">
+              <p>Follow us on Social Media!</p>
+              <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
+                <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
+                <li class="ftco-animate"><a href="https://fb.me/kuriusmtl" target="_blank"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://instagram.com/kuriusmtl" target="_blank"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://linkedin.com/company/kurius" target="_blank"><span class="icon-linkedin"></span></a></li>
+
+              </ul>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-12 text-center">
-  
-              <!-- <p>Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
-    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  </p> -->
+          <div class="col-md-4">
+            <div class="ftco-footer-widget mb-4" style="padding-bottom: 1px">
+              <h2 style="font-size: 25px; padding-bottom: 1px">Contact Information</h2>
+
+                <!-- <li><a href="#" class="py-2 d-block">198 West 21th Street, Suite 721 New York NY 10016</a></li> -->
+                <a href="mailto:info@kurius.ca" class="py-2 d-block">info@kurius.ca</a>
             </div>
           </div>
         </div>
-      </footer>
+        <div class="row">
+          <div class="col-md-12 text-center">
+
+            <!-- <p>Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
+    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  </p> -->
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen">
