--- a/fr-index.html
+++ b/fr-index.html
@@ -69,7 +69,7 @@
           <!-- <li class="nav-item"><a href="blog-single.html" class="nav-link">Join Us</a></li> -->
           <!-- <li class="nav-item"><a href="blog.html" class="nav-link">School</a></li> -->
           <li class="nav-item"><a href="contact.html" class="nav-link">Join Us</a></li>
-          <li class="nav-item"><a href="fr-index.html" class="nav-link">FR</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">EN</a></li>
 
         </ul>
       </div>
