--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
         <div class="col-md-12">
           <div class="carousel owl-carousel">
             <div class="item">
-              <a href="portfolio.html">
+              <a href="index.html">
                 <img src="images/EFL_0475.jpg" class="img-fluid" alt="">
               </a>
             </div>
             <div class="item">
-              <a href="portfolio.html">
+              <a href="index.html">
                 <img src="images/photo1.jpg" class="img-fluid" alt="">
               </a>
             </div>
             <div class="item">
-              <a href="portfolio.html">
+              <a href="index.html">
                 <img src="images/img_9336093.jpg" class="img-fluid" alt="">
               </a>
             </div>
@@ -204,8 +204,8 @@ participants per Kurius Hack if our pilot project shows great success.</h3>
                   class="align-self-center icon-layers"></span></div>
             </div>
             <div class="media-body p-2">
-             <h2 class="heading">Kurius Capsules</h2>
-             <p style="font-size: 20px">Specially designed for our students in mind, our Capsules gather a variety of industry specialists in a
+             <h2 class="heading;" >Kurius Capsules</h2>
+             <p style="font-size: 20px; color: rgb(100,100,100);">Specially designed for our students in mind, our Capsules gather a variety of industry specialists in a
                 weekly workshop session. They have the unique chance to learn from the best in a tight-nit community of
                 equally passionate students.</p>
             </div>
@@ -219,7 +219,7 @@ participants per Kurius Hack if our pilot project shows great success.</h3>
             </div>
             <div class="media-body p-2">
              <h2 class="heading">Kurius Periods</h2>
-             <p style="font-size: 20px">Specially designed for our students in mind, our Periods allow our participants to collaborate in a fun and engaging session dedicated to coding during a weekend, and
+             <p style="font-size: 20px; color: rgb(100,100,100)">Specially designed for our students in mind, our Periods allow our participants to collaborate in a fun and engaging session dedicated to coding during a weekend, and
 work together on a big project that will be showcased at the end of the Kurius Hack. </p>
             </div>
           </div>
